Diversas modificações e melhorias no projeto